Width of image squashed down on the event page. That's now fixed.

--- a/_sass/_layout-event.scss
+++ b/_sass/_layout-event.scss
@@ -63,7 +63,7 @@
         margin-bottom: 20px;
 
         img {
-            width: 100px;
+            min-width: 100px;
             height: 100px;
             object-fit: cover;
             border-radius: 120px;
